# spreading_CR

./: .gitignore  CMakeLists.txt  LICENSE  README.md  examples.ipynb  setup.py
.github/: CODEOWNERS
cpp/: CMakeLists.txt
cpp/lib/: .StaticNetworkSIR.hpp.swp  BinaryTree.hpp  Network.hpp  PropagationProcess.cpp  PropagationProcess.hpp  cPropagationProcess.cpp  io_data.cpp  io_data.hpp
cpp/src/: critical_time_SIR.cpp  critical_time_SIS.cpp  final_size_SIR.cpp  prevalence_SIS.cpp  rejection_probability.cpp  test_binary_tree.cpp  time_SIR.cpp  time_SIS.cpp  time_evolution_SIR.cpp  time_evolution_SIS.cpp
docs/: Makefile  conf.py  make.bat  spreading_CR.rst
docs/builds/doctrees/: environment.pickle  index.doctree  spreading_CR.doctree
docs/builds/doctrees/_generate/: spreading_CR.SpreadingProcess.__init__.doctree  spreading_CR.SpreadingProcess.evolve.doctree  spreading_CR.SpreadingProcess.get_Inode_number_vector.doctree  spreading_CR.SpreadingProcess.get_Rnode_number_vector.doctree  spreading_CR.SpreadingProcess.get_time_vector.doctree  spreading_CR.SpreadingProcess.initialize.doctree  spreading_CR.SpreadingProcess.is_absorbed.doctree  spreading_CR.SpreadingProcess.next_state.doctree  spreading_CR.SpreadingProcess.reset.doctree
docs/builds/html/: .buildinfo  genindex.html  index.html  objects.inv  py-modindex.html  search.html  searchindex.js  spreading_CR.html
docs/builds/html/_generate/: spreading_CR.SpreadingProcess.__init__.html  spreading_CR.SpreadingProcess.evolve.html  spreading_CR.SpreadingProcess.get_Inode_number_vector.html  spreading_CR.SpreadingProcess.get_Rnode_number_vector.html  spreading_CR.SpreadingProcess.get_time_vector.html  spreading_CR.SpreadingProcess.initialize.html  spreading_CR.SpreadingProcess.is_absorbed.html  spreading_CR.SpreadingProcess.next_state.html  spreading_CR.SpreadingProcess.reset.html
docs/builds/html/_modules/: index.html
docs/builds/html/_sources/: index.rst.txt
docs/builds/html/_sources/_generate/: spreading_CR.SpreadingProcess.__init__.rst.txt  spreading_CR.SpreadingProcess.evolve.rst.txt  spreading_CR.SpreadingProcess.get_Inode_number_vector.rst.txt  spreading_CR.SpreadingProcess.get_Rnode_number_vector.rst.txt  spreading_CR.SpreadingProcess.get_time_vector.rst.txt  spreading_CR.SpreadingProcess.initialize.rst.txt  spreading_CR.SpreadingProcess.is_absorbed.rst.txt  spreading_CR.SpreadingProcess.next_state.rst.txt  spreading_CR.SpreadingProcess.reset.rst.txt
src/: BinaryTree.cpp  BinaryTree.hpp  CMakeLists.txt  HashPropensity.cpp  HashPropensity.hpp  Network.cpp  PropagationProcess.cpp  PropagationProcess.hpp  QSSpreadingProcess.cpp  QSSpreadingProcess.hpp  SpreadingProcess.cpp  SpreadingProcess.hpp  StaticNetworkSIR.cpp  StaticNetworkSIR.hpp  bind_spreading_CR.cpp  evolution.cpp  evolution.hpp  main_test.cpp  pybind_gillespie_propagation.cpp
test/: base_time_BA.txt  base_time_ER.txt  optimize_base.py  result_postopt_v1.txt  result_postopt_v2.txt  result_postopt_v3.txt  result_postopt_v4.txt  result_postopt_v5.txt  result_postopt_v6.txt  result_postopt_v7.txt  result_preopt.txt  test.py  test2.py
